Add nodejs swagger server. Add jaxrs swagger server. Setup test SwaggerServer for Server plugin using jaxrs swagger server code
